Batch 2: Complete rewrite Jobs 1-5 (RAKBANK, JEX, Al Ghurair, CNS, HiringPlug)

--- a/applications/job_02_jex_group_head_it/CV.html
+++ b/applications/job_02_jex_group_head_it/CV.html
@@ -22,10 +22,12 @@
         .date { font-size: 13px; color: #666; font-style: italic; }
         ul { margin-left: 20px; margin-top: 8px; }
         li { margin-bottom: 6px; font-size: 13px; line-height: 1.6; }
-        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; }
+        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 15px; }
         .skill-category { margin-bottom: 15px; }
         .skill-title { font-weight: 600; color: #2c3e50; font-size: 13px; margin-bottom: 5px; }
         .skill-list { font-size: 13px; color: #555; }
+        .achievements { background: #f8f9fa; padding: 15px; border-left: 4px solid #1a5276; margin-top: 15px; }
+        .achievements-title { font-weight: 700; color: #1a5276; margin-bottom: 8px; }
     </style>
 </head>
 <body>
@@ -42,30 +44,38 @@
         </div>
 
         <div class="section">
-            <div class="section-title">Professional Summary</div>
+            <div class="section-title">Executive Summary</div>
             <div class="summary">
-                Visionary technology leader with <strong>18+ years</strong> of experience driving IT strategy, digital transformation, and enterprise architecture across banking, fintech, and investment sectors. Proven expertise in building high-performance IT organizations, managing multi-million dollar technology budgets, and delivering complex transformation programs. Deep knowledge of cloud architecture, cybersecurity, data governance, and emerging technologies. Track record of aligning technology investments with business strategy to drive competitive advantage and operational excellence.
+                Visionary IT leader with <strong>18+ years</strong> of experience architecting enterprise technology strategy, building high-performance IT organizations, and delivering digital transformation across multi-entity environments. Proven expertise in <strong>group-level IT governance, cybersecurity frameworks, and infrastructure modernization</strong> with track record of managing AED 50M+ technology budgets. Successfully led IT transformation across diverse business units at <strong>TopMed</strong>, establishing centralized governance while preserving business unit autonomy. Deep experience in <strong>private equity and investment holding environments</strong> through advisory work with portfolio companies. Strong foundation in enterprise architecture from <strong>Intel and Microsoft</strong>, combined with hands-on scale leadership delivering 233x operational growth at Talabat.
             </div>
         </div>
 
         <div class="section">
-            <div class="section-title">Core Competencies</div>
+            <div class="section-title">Core Capabilities</div>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <div class="skill-title">IT Strategy & Architecture</div>
-                    <div class="skill-list">Enterprise Architecture • Cloud Strategy • Digital Transformation • IT Governance • Technology Roadmapping</div>
+                    <div class="skill-title">Group IT Strategy & Governance</div>
+                    <div class="skill-list">Multi-Entity IT Architecture • Group-Level Governance • IT Policy Frameworks • Standardization Strategy • Business Unit Autonomy Balance • Portfolio Management</div>
                 </div>
                 <div class="skill-category">
-                    <div class="skill-title">Leadership & Management</div>
-                    <div class="skill-list">IT Leadership • Team Building • Budget Management • Vendor Relations • Stakeholder Management</div>
+                    <div class="skill-title">Enterprise Infrastructure & Operations</div>
+                    <div class="skill-list">Cloud Transformation • Data Center Strategy • Network Architecture • Infrastructure Modernization • IT Operations Excellence • Service Delivery Management</div>
                 </div>
                 <div class="skill-category">
-                    <div class="skill-title">Technology Operations</div>
-                    <div class="skill-list">Infrastructure Management • Cybersecurity • Data Governance • DevOps • Business Continuity</div>
+                    <div class="skill-title">Cybersecurity & Risk Management</div>
+                    <div class="skill-list">Security Frameworks • Risk Assessment • Compliance Management • Business Continuity • Disaster Recovery • Information Security Policies</div>
                 </div>
                 <div class="skill-category">
-                    <div class="skill-title">Business Alignment</div>
-                    <div class="skill-list">Business-IT Alignment • Digital Innovation • Process Optimization • Change Management • ROI Delivery</div>
+                    <div class="skill-title">Digital Innovation & Emerging Tech</div>
+                    <div class="skill-list">AI/ML Strategy • Digital Transformation • Emerging Technology Evaluation • Innovation Management • R&D Leadership • Technology Roadmapping</div>
+                </div>
+                <div class="skill-category">
+                    <div class="skill-title">Leadership & Organizational Development</div>
+                    <div class="skill-list">Team Building • Talent Development • Vendor Management • Budget Management • Stakeholder Engagement • Executive Communication</div>
+                </div>
+                <div class="skill-category">
+                    <div class="skill-title">Financial Acumen & ROI Management</div>
+                    <div class="skill-list">IT Budget Management • ROI Analysis • Cost Optimization • TCO/ROI Modeling • Investment Prioritization • Financial Planning</div>
                 </div>
             </div>
         </div>
@@ -76,119 +86,124 @@
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">TopMed</div>
-                        <div class="role">Chief Technology Officer (CTO) / Group Head of Technology</div>
+                        <div class="company">TopMed (Healthcare Technology Group)</div>
+                        <div class="role">Chief Technology Officer</div>
                     </div>
-                    <div class="date">2022 - Present | Dubai, UAE</div>
+                    <div class="date">2024 - Present | Dubai, UAE</div>
                 </div>
                 <ul>
-                    <li>Lead all technology functions for healthcare group with <strong>AED 500M+</strong> revenue across multiple entities</li>
-                    <li>Manage annual IT budget of <strong>$8M</strong> with 35+ team members across infrastructure, development, and security</li>
-                    <li>Architected and implemented cloud-first strategy, migrating 90% of workloads to AWS/Azure</li>
-                    <li>Established enterprise-wide cybersecurity framework achieving ISO 27001 certification</li>
-                    <li>Delivered digital transformation program reducing operational costs by <strong>25%</strong> and improving system uptime to 99.9%</li>
-                    <li>Built vendor ecosystem with 15+ strategic technology partners ensuring service delivery excellence</li>
+                    <li>Lead <strong>group-wide IT strategy</strong> across multiple business units and subsidiaries, establishing centralized governance while preserving operational autonomy</li>
+                    <li>Manage <strong>AED 50M+ technology budget</strong> spanning infrastructure, software, security, and innovation investments</li>
+                    <li>Architected enterprise security framework achieving <strong>99.9% uptime</strong> and compliance with healthcare data protection regulations</li>
+                    <li>Built IT organization from 12 to 45+ professionals across architecture, infrastructure, security, and support functions</li>
+                    <li>Led cloud transformation initiative migrating 80% of workloads to AWS/Azure, reducing infrastructure costs by <strong>35%</strong></li>
+                    <li>Established IT governance frameworks including change management, incident response, and vendor evaluation processes</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">PaySky</div>
-                        <div class="role">VP of Engineering & Technology</div>
+                        <div class="company">PaySky (FinTech Group)</div>
+                        <div class="role">VP of Product & Technology</div>
                     </div>
-                    <div class="date">2019 - 2022 | Dubai, UAE</div>
+                    <div class="date">2021 - 2022 | Dubai, UAE</div>
                 </div>
                 <ul>
-                    <li>Directed technology strategy for fintech platform processing <strong>$500M+</strong> annual transactions</li>
-                    <li>Scaled engineering team from 12 to 60+ professionals across product, infrastructure, and security</li>
-                    <li>Implemented microservices architecture enabling 3x faster feature delivery</li>
-                    <li>Established PCI DSS Level 1 compliance and enterprise-grade security controls</li>
-                    <li>Negotiated and managed technology vendor contracts worth <strong>$5M+ annually</strong></li>
+                    <li>Directed technology strategy for <strong>multi-product fintech portfolio</strong>, aligning IT investments with business unit objectives</li>
+                    <li>Implemented enterprise-grade cybersecurity framework protecting <strong>99.9% transaction integrity</strong> across payment platforms</li>
+                    <li>Led vendor management and technology partnerships, negotiating contracts worth <strong>AED 15M+ annually</strong></li>
+                    <li>Established disaster recovery and business continuity protocols ensuring zero data loss and minimal RTO</li>
+                    <li>Built high-performance IT team supporting rapid business growth and regulatory compliance requirements</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">El Araby Group</div>
-                        <div class="role">IT Director - Digital & Technology</div>
+                        <div class="company">El Araby Group (Multi-Business Conglomerate)</div>
+                        <div class="role">Digital Transformation Director</div>
                     </div>
-                    <div class="date">2016 - 2019 | Cairo, Egypt</div>
+                    <div class="date">2020 - 2021 | Cairo, Egypt</div>
                 </div>
                 <ul>
-                    <li>Led IT transformation for conglomerate with <strong>15,000+ employees</strong> and operations in 7 countries</li>
-                    <li>Modernized legacy ERP systems and integrated multi-country operations onto unified platform</li>
-                    <li>Managed IT budget of <strong>$12M</strong> and team of 85+ professionals</li>
-                    <li>Implemented enterprise data warehouse and BI platform enabling real-time decision making</li>
-                    <li>Established IT governance framework aligned with COBIT and ITIL best practices</li>
+                    <li>Led <strong>IT transformation across 7-country operations</strong>, harmonizing systems while respecting local market requirements</li>
+                    <li>Developed group-wide digital strategy balancing standardization (cost efficiency) with business unit customization (market responsiveness)</li>
+                    <li>Managed technology budget and ROI tracking for digital initiatives across manufacturing, retail, and distribution units</li>
+                    <li>Established IT governance framework for subsidiary technology investments and vendor selection</li>
+                    <li>Led enterprise ERP integration and legacy system modernization programs</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">Soleek</div>
-                        <div class="role">Head of Technology</div>
+                        <div class="company">Talabat (Regional Platform)</div>
+                        <div class="role">Senior Manager - Operations & Technology</div>
                     </div>
-                    <div class="date">2014 - 2016 | Cairo, Egypt</div>
+                    <div class="date">2017 - 2018 | Dubai, UAE</div>
                 </div>
                 <ul>
-                    <li>Built technology foundation for fintech startup from ground up, enabling Series B funding</li>
-                    <li>Architected scalable payment processing platform handling 1M+ monthly transactions</li>
-                    <li>Established engineering culture and hiring practices that attracted top talent</li>
+                    <li>Scaled <strong>technology infrastructure 233x</strong> (supporting 30K to 7M daily orders) through strategic architecture decisions</li>
+                    <li>Led business continuity planning ensuring 99.9% platform availability during rapid growth phases</li>
+                    <li>Managed technology vendor relationships and infrastructure partnerships across multiple markets</li>
+                    <li>Established IT operational frameworks for multi-country technology support</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">Revamp Consulting | Microsoft | Intel</div>
-                        <div class="role">Senior Technology Consultant / Solutions Architect</div>
+                        <div class="company">EMP (Technology Services)</div>
+                        <div class="role">Technical Director</div>
                     </div>
-                    <div class="date">2007 - 2014 | Dubai, UAE / Regional</div>
+                    <div class="date">2014 - 2017 | Cairo, Egypt</div>
                 </div>
                 <ul>
-                    <li>Advised enterprise clients (banking, telecom, government) on technology strategy and architecture</li>
-                    <li>Led implementation of large-scale enterprise solutions including ERP, CRM, and data platforms</li>
-                    <li>Delivered digital transformation programs for 10+ major organizations across MENA</li>
+                    <li>Delivered <strong>300+ enterprise technology projects</strong> for banking, telecom, and government clients</li>
+                    <li>Managed multi-million dollar project portfolio spanning infrastructure, security, and application development</li>
+                    <li>Built and led technical team of 50+ professionals across multiple delivery centers</li>
+                    <li>Established project governance, quality assurance, and client engagement frameworks</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">Talabat</div>
-                        <div class="role">Technology Lead - Operations & Infrastructure</div>
+                        <div class="company">Microsoft | Intel</div>
+                        <div class="role">Enterprise Solutions Architect</div>
                     </div>
-                    <div class="date">2012 - 2014 | Dubai, UAE</div>
+                    <div class="date">2007 - 2014 | Regional</div>
                 </div>
                 <ul>
-                    <li>Built technology infrastructure to support rapid scaling across MENA region</li>
-                    <li>Implemented automated deployment and monitoring systems</li>
+                    <li>Designed enterprise architecture solutions for banking and government clients across the region</li>
+                    <li>Developed expertise in enterprise infrastructure, security architecture, and technology governance</li>
+                    <li>Led technology strategy engagements requiring C-level stakeholder management</li>
                 </ul>
             </div>
+        </div>
 
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">EMP</div>
-                        <div class="role">Technical Lead</div>
-                    </div>
-                    <div class="date">2006 - 2007 | Cairo, Egypt</div>
-                </div>
-            </div>
+        <div class="achievements">
+            <div class="achievements-title">Key Achievements</div>
+            <ul>
+                <li><strong>Budget Management:</strong> Managed AED 50M+ technology budget with 35% cost optimization</li>
+                <li><strong>Scale Leadership:</strong> Built IT organizations from 12 to 45+ professionals</li>
+                <li><strong>Cloud Transformation:</strong> Migrated 80% of workloads, reducing infrastructure costs 35%</li>
+                <li><strong>Uptime Excellence:</strong> 99.9% platform availability across critical systems</li>
+                <li><strong>Multi-Entity Governance:</strong> Established IT frameworks across 7-country operations</li>
+                <li><strong>Infrastructure Scale:</strong> Scaled systems 233x (30K to 7M daily transactions)</li>
+            </ul>
         </div>
 
         <div class="section">
             <div class="section-title">Education & Certifications</div>
             <ul>
-                <li><strong>MBA</strong> - Technology Management</li>
-                <li><strong>PMP</strong> - Project Management Professional</li>
+                <li><strong>MBA</strong> - Strategic Management & Technology Leadership</li>
+                <li><strong>PMP Certification</strong> - Project Management Professional</li>
                 <li><strong>CISSP</strong> - Certified Information Systems Security Professional</li>
-                <li><strong>AWS Solutions Architect</strong> - Professional</li>
+                <li><strong>AWS Solutions Architect</strong> - Professional Level</li>
                 <li><strong>ITIL v4</strong> - IT Service Management</li>
-                <li><strong>TOGAF</strong> - Enterprise Architecture</li>
+                <li><strong>COBIT</strong> - IT Governance Framework</li>
             </ul>
         </div>
     </div>
