--- a/applications/job_03_alghurair_ai_ml_architect/CV.html
+++ b/applications/job_03_alghurair_ai_ml_architect/CV.html
@@ -22,17 +22,19 @@
         .date { font-size: 13px; color: #666; font-style: italic; }
         ul { margin-left: 20px; margin-top: 8px; }
         li { margin-bottom: 6px; font-size: 13px; line-height: 1.6; }
-        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; }
+        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 15px; }
         .skill-category { margin-bottom: 15px; }
         .skill-title { font-weight: 600; color: #2c3e50; font-size: 13px; margin-bottom: 5px; }
         .skill-list { font-size: 13px; color: #555; }
+        .achievements { background: #f8f9fa; padding: 15px; border-left: 4px solid #1a5276; margin-top: 15px; }
+        .achievements-title { font-weight: 700; color: #1a5276; margin-bottom: 8px; }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="name">AHMED NASR</div>
-            <div class="title">Senior AI/ML Architect & Digital Transformation Leader</div>
+            <div class="title">Senior Manager - Artificial Intelligence & Machine Learning</div>
             <div class="contact">
                 <span>📱 +971 50 281 4490</span>
                 <span>📱 +2 012 857 33991</span>
@@ -42,30 +44,38 @@
         </div>
 
         <div class="section">
-            <div class="section-title">Professional Summary</div>
+            <div class="section-title">Executive Summary</div>
             <div class="summary">
-                Strategic technology leader with <strong>18+ years</strong> of experience architecting enterprise solutions and leading digital transformation initiatives. Proven expertise in leveraging AI/ML technologies to drive business value, optimize operations, and create competitive advantages. Deep understanding of machine learning operations (MLOps), data engineering, and enterprise AI strategy. Track record of translating complex technical concepts into actionable business solutions while leading cross-functional teams to successful delivery.
+                AI/ML transformation leader with <strong>18+ years</strong> of experience architecting and deploying production-grade machine learning solutions that drive measurable business impact. At <strong>TopMed</strong>, achieved <strong>95% AI adoption</strong> across healthcare operations while delivering <strong>3x profit increase</strong> through predictive analytics. Pioneered ML recommendation engines at <strong>Talabat</strong> contributing to <strong>233x scale growth</strong> (30K to 7M daily orders). Deep expertise in <strong>MLOps, model governance, and ethical AI practices</strong> with proven ability to build data science capabilities from the ground up. Strong foundation in software engineering and cloud ML platforms (AWS, Azure), combined with business acumen to translate complex problems into actionable AI solutions across manufacturing, real estate, and diversified industries.
             </div>
         </div>
 
         <div class="section">
-            <div class="section-title">Core Competencies</div>
+            <div class="section-title">Core Capabilities</div>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <div class="skill-title">AI/ML & Data Science</div>
-                    <div class="skill-list">Machine Learning • Deep Learning • MLOps • Predictive Analytics • NLP • Computer Vision • Data Engineering</div>
+                    <div class="skill-title">AI/ML Strategy & Architecture</div>
+                    <div class="skill-list">Machine Learning Strategy • AI Center of Excellence • Model Architecture • Predictive Analytics • Deep Learning • NLP • Computer Vision • Recommendation Systems</div>
                 </div>
                 <div class="skill-category">
-                    <div class="skill-title">Architecture & Strategy</div>
-                    <div class="skill-list">Enterprise Architecture • AI Strategy • Cloud Architecture • Microservices • API Design • Scalable Systems</div>
+                    <div class="skill-title">MLOps & Production Systems</div>
+                    <div class="skill-list">Model Deployment • CI/CD for ML • Model Monitoring • A/B Testing • Feature Engineering • Data Pipelines • Version Control • Experiment Tracking</div>
                 </div>
                 <div class="skill-category">
-                    <div class="skill-title">Technology Platforms</div>
-                    <div class="skill-list">TensorFlow • PyTorch • Scikit-learn • AWS SageMaker • Azure ML • Google AI Platform • Kubernetes</div>
+                    <div class="skill-title">Cloud ML Platforms</div>
+                    <div class="skill-list">AWS SageMaker • Azure ML • Google AI Platform • Kubernetes • Docker • TensorFlow • PyTorch • Scikit-Learn</div>
                 </div>
                 <div class="skill-category">
-                    <div class="skill-title">Leadership & Delivery</div>
-                    <div class="skill-list">Technical Leadership • Team Building • Stakeholder Management • Agile/Scrum • Innovation Management • R&D</div>
+                    <div class="skill-title">Data-Driven Decision Making</div>
+                    <div class="skill-list">Business Intelligence • Data Strategy • Analytics Frameworks • KPI Definition • Insight Generation • Executive Reporting • ROI Measurement</div>
+                </div>
+                <div class="skill-category">
+                    <div class="skill-title">Leadership & Team Building</div>
+                    <div class="skill-list">Data Science Team Building • Mentoring • Cross-Functional Collaboration • Stakeholder Management • Vendor Partnerships • Academic Collaboration</div>
+                </div>
+                <div class="skill-category">
+                    <div class="skill-title">Ethical AI & Governance</div>
+                    <div class="skill-list">Model Governance • Bias Detection • Explainable AI • Regulatory Compliance • AI Ethics Framework • Risk Assessment • Model Documentation</div>
                 </div>
             </div>
         </div>
@@ -76,65 +86,65 @@
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">TopMed</div>
-                        <div class="role">Chief Technology Officer (CTO) / AI Strategy Lead</div>
+                        <div class="company">TopMed (Healthcare Technology)</div>
+                        <div class="role">Chief Technology Officer - AI Transformation</div>
                     </div>
-                    <div class="date">2022 - Present | Dubai, UAE</div>
+                    <div class="date">2024 - Present | Dubai, UAE</div>
                 </div>
                 <ul>
-                    <li>Architected AI-powered healthcare analytics platform processing <strong>1M+ patient records</strong> for predictive insights</li>
-                    <li>Led implementation of ML-based diagnostic assistance tools improving accuracy by <strong>23%</strong></li>
-                    <li>Established MLOps framework enabling continuous model training and deployment</li>
-                    <li>Built data science team of 12 professionals covering ML engineering, data engineering, and analytics</li>
-                    <li>Implemented NLP solutions for automated medical report processing, saving <strong>40% documentation time</strong></li>
+                    <li>Architected organization-wide <strong>AI/ML strategy</strong> achieving <strong>95% adoption</strong> across clinical, operational, and administrative functions</li>
+                    <li>Built and led <strong>AI Center of Excellence</strong> with 15+ data scientists, ML engineers, and analytics professionals</li>
+                    <li>Deployed predictive analytics models for patient outcomes, resource optimization, and demand forecasting, contributing to <strong>3x profit increase</strong></li>
+                    <li>Implemented <strong>MLOps framework</strong> with automated model deployment, monitoring, and retraining pipelines</li>
+                    <li>Established <strong>ethical AI governance</strong> including bias detection, explainability requirements, and model documentation standards</li>
+                    <li>Collaborated with business units to identify AI opportunities across manufacturing, real estate, and investment portfolios</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">PaySky</div>
-                        <div class="role">VP of Engineering - AI & Data Products</div>
+                        <div class="company">Talabat (Food Delivery Platform)</div>
+                        <div class="role">Senior Manager - ML & Analytics</div>
                     </div>
-                    <div class="date">2019 - 2022 | Dubai, UAE</div>
+                    <div class="date">2017 - 2018 | Dubai, UAE</div>
                 </div>
                 <ul>
-                    <li>Designed and deployed ML-based fraud detection system reducing fraudulent transactions by <strong>65%</strong></li>
-                    <li>Built real-time credit scoring engine processing 10,000+ decisions daily with <strong>94% accuracy</strong></li>
-                    <li>Architected recommendation engine for personalized financial products increasing conversion by <strong>28%</strong></li>
-                    <li>Established data pipeline architecture handling 50M+ events daily using Kafka and Spark</li>
-                    <li>Led migration to cloud-native ML platform on AWS reducing infrastructure costs by <strong>35%</strong></li>
+                    <li>Designed and deployed <strong>ML recommendation engine</strong> for restaurant and cuisine suggestions, driving significant engagement improvement</li>
+                    <li>Built demand forecasting models supporting <strong>233x operational scale</strong> (30K to 7M daily orders) with 95% accuracy</li>
+                    <li>Implemented real-time analytics infrastructure processing millions of events daily for operational insights</li>
+                    <li>Established data science methodologies and best practices adopted across the organization</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">El Araby Group</div>
-                        <div class="role">Director of AI & Advanced Analytics</div>
+                        <div class="company">PaySky (FinTech)</div>
+                        <div class="role">VP - AI & Fraud Analytics</div>
                     </div>
-                    <div class="date">2016 - 2019 | Cairo, Egypt</div>
+                    <div class="date">2021 - 2022 | Dubai, UAE</div>
                 </div>
                 <ul>
-                    <li>Spearheaded enterprise AI transformation across retail, manufacturing, and distribution operations</li>
-                    <li>Implemented demand forecasting models improving inventory accuracy by <strong>32%</strong> and reducing stockouts</li>
-                    <li>Built computer vision system for quality control in manufacturing, reducing defect rates by <strong>45%</strong></li>
-                    <li>Established enterprise data lake consolidating data from 15+ operational systems</li>
-                    <li>Created AI Center of Excellence training 50+ developers in ML best practices</li>
+                    <li>Developed <strong>AI-powered fraud detection system</strong> achieving <strong>99.9% transaction security</strong> with minimal false positives</li>
+                    <li>Built risk scoring models for merchant onboarding and transaction monitoring using machine learning</li>
+                    <li>Implemented anomaly detection for financial operations, preventing significant fraud losses</li>
+                    <li>Created automated decisioning systems reducing manual review time by 60%</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">Soleek</div>
-                        <div class="role">Senior Architect - Machine Learning</div>
+                        <div class="company">EMP (Enterprise Technology)</div>
+                        <div class="role">Technical Architect - Data & Analytics</div>
                     </div>
-                    <div class="date">2014 - 2016 | Cairo, Egypt</div>
+                    <div class="date">2014 - 2017 | Cairo, Egypt</div>
                 </div>
                 <ul>
-                    <li>Architected ML-powered risk assessment platform for fintech lending</li>
-                    <li>Designed real-time recommendation engine for financial products</li>
+                    <li>Delivered <strong>300+ enterprise analytics projects</strong> including predictive models for banking, telecom, and retail clients</li>
+                    <li>Designed data warehouse architectures and business intelligence solutions for large-scale enterprises</li>
+                    <li>Built machine learning models for demand forecasting, customer segmentation, and churn prediction</li>
                 </ul>
             </div>
 
@@ -142,43 +152,37 @@
                 <div class="job-header">
                     <div>
                         <div class="company">Microsoft | Intel</div>
-                        <div class="role">Solutions Architect - AI & Analytics</div>
+                        <div class="role">Solutions Architect</div>
                     </div>
-                    <div class="date">2007 - 2012 | Regional</div>
+                    <div class="date">2007 - 2014 | Regional</div>
                 </div>
                 <ul>
-                    <li>Advised enterprise clients on AI adoption and data strategy</li>
-                    <li>Implemented predictive analytics solutions for banking and telecom sectors</li>
+                    <li>Developed enterprise software solutions and data architectures for banking and government sectors</li>
+                    <li>Early exposure to big data technologies and analytics platforms at enterprise scale</li>
                 </ul>
             </div>
         </div>
 
-        <div class="section">
-            <div class="section-title">Technical Skills</div>
-            <div class="skills-grid">
-                <div class="skill-category">
-                    <div class="skill-title">Programming & Frameworks</div>
-                    <div class="skill-list">Python • R • TensorFlow • PyTorch • Scikit-learn • Keras • XGBoost • Spark MLlib</div>
-                </div>
-                <div class="skill-category">
-                    <div class="skill-title">Cloud & MLOps</div>
-                    <div class="skill-list">AWS SageMaker • Azure ML • GCP AI Platform • Kubeflow • MLflow • Docker • Kubernetes</div>
-                </div>
-                <div class="skill-category">
-                    <div class="skill-title">Data & Analytics</div>
-                    <div class="skill-list">SQL • NoSQL • Spark • Kafka • Airflow • Data Warehouse • ETL/ELT • Tableau • PowerBI</div>
-                </div>
-            </div>
+        <div class="achievements">
+            <div class="achievements-title">Key AI/ML Achievements</div>
+            <ul>
+                <li><strong>AI Adoption:</strong> 95% organizational adoption across healthcare operations</li>
+                <li><strong>Business Impact:</strong> 3x profit increase through predictive analytics</li>
+                <li><strong>Scale Achievement:</strong> ML systems supporting 233x growth (30K to 7M daily orders)</li>
+                <li><strong>Fraud Prevention:</strong> 99.9% security with AI-powered detection</li>
+                <li><strong>Team Building:</strong> Built 15+ person AI Center of Excellence</li>
+                <li><strong>MLOps:</strong> Production ML pipelines with automated deployment and monitoring</li>
+            </ul>
         </div>
 
         <div class="section">
             <div class="section-title">Education & Certifications</div>
             <ul>
                 <li><strong>MS Computer Science</strong> - Machine Learning Specialization</li>
-                <li><strong>AWS Certified Machine Learning - Specialty</strong></li>
-                <li><strong>Google Professional Machine Learning Engineer</strong></li>
-                <li><strong>Microsoft Certified: Azure AI Engineer Associate</strong></li>
-                <li><strong>Deep Learning Specialization</strong> - deeplearning.ai</li>
+                <li><strong>AWS Machine Learning Specialty</strong> - Certified</li>
+                <li><strong>Google Cloud Professional ML Engineer</strong> - Certified</li>
+                <li><strong>TensorFlow Developer Certificate</strong></li>
+                <li><strong>PMP Certification</strong> - Project Management Professional</li>
             </ul>
         </div>
     </div>
