--- a/applications/job_04_cns_senior_manager_apps/CV.html
+++ b/applications/job_04_cns_senior_manager_apps/CV.html
@@ -14,6 +14,7 @@
         .contact { display: flex; flex-wrap: wrap; gap: 20px; margin-top: 15px; font-size: 14px; color: #555; }
         .section { margin-bottom: 25px; }
         .section-title { font-size: 16px; color: #1a5276; text-transform: uppercase; border-bottom: 2px solid #1a5276; padding-bottom: 5px; margin-bottom: 15px; font-weight: 700; }
+        .summary { font-size: 14px; line-height: 1.7; color: #444; text-align: justify; }
         .experience-item { margin-bottom: 20px; }
         .job-header { display: flex; justify-content: space-between; align-items: baseline; flex-wrap: wrap; }
         .company { font-weight: 700; color: #2c3e50; font-size: 15px; }
@@ -21,7 +22,7 @@
         .date { font-size: 13px; color: #666; font-style: italic; }
         ul { margin-left: 20px; margin-top: 8px; }
         li { margin-bottom: 6px; font-size: 13px; line-height: 1.6; }
-        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; }
+        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 15px; }
         .skill-category { margin-bottom: 15px; }
         .skill-title { font-weight: 600; color: #2c3e50; font-size: 13px; margin-bottom: 5px; }
         .skill-list { font-size: 13px; color: #555; }
@@ -31,7 +32,7 @@
     <div class="container">
         <div class="header">
             <div class="name">AHMED NASR</div>
-            <div class="title">Senior Manager - Applications & Enterprise Systems</div>
+            <div class="title">Senior Manager - Applications</div>
             <div class="contact">
                 <span>📱 +971 50 281 4490</span>
                 <span>📱 +2 012 857 33991</span>
@@ -41,30 +42,30 @@
         </div>
 
         <div class="section">
-            <div class="section-title">Professional Summary</div>
-            <p style="font-size: 14px; line-height: 1.7; color: #444;">
-                Accomplished applications management professional with <strong>18+ years</strong> of experience leading enterprise application strategy, implementation, and operations across diverse industries. Proven expertise in ERP systems, custom application development, application lifecycle management, and vendor relationship management. Track record of delivering complex application projects on time and budget while ensuring high availability and performance. Skilled in bridging business needs with technical solutions and managing cross-functional delivery teams.
-            </p>
+            <div class="section-title">Executive Summary</div>
+            <div class="summary">
+                Results-driven applications leader with <strong>18+ years</strong> of experience managing enterprise application delivery, client relationships, and software development lifecycle across government and enterprise sectors. Proven track record of delivering <strong>300+ projects</strong> with consistent SLA compliance and quality standards. Deep expertise in <strong>ERP systems, application modernization, and solution architecture</strong> with strong client-facing delivery background. Experienced in building and mentoring high-performance technical teams while ensuring on-time, on-budget project delivery.
+            </div>
         </div>
 
         <div class="section">
-            <div class="section-title">Core Competencies</div>
+            <div class="section-title">Core Capabilities</div>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <div class="skill-title">Application Management</div>
-                    <div class="skill-list">ERP Implementation • Application Lifecycle Management • Vendor Management • License Optimization • Support Operations</div>
+                    <div class="skill-title">Application Delivery & Management</div>
+                    <div class="skill-list">SDLC Management • Application Support • Release Management • Quality Assurance • SLA Compliance • Incident Management • Change Management</div>
+                </div>
+                <div class="skill-category">
+                    <div class="skill-title">Client Relationship Management</div>
+                    <div class="skill-list">Client Engagement • Requirements Gathering • Expectation Management • Stakeholder Communication • Account Growth • Satisfaction Management</div>
                 </div>
                 <div class="skill-category">
                     <div class="skill-title">Enterprise Systems</div>
-                    <div class="skill-list">SAP • Oracle • Microsoft Dynamics • CRM Systems • HRMS • Financial Systems • Custom Applications</div>
+                    <div class="skill-list">ERP Implementation • CRM Systems • Enterprise Architecture • System Integration • Legacy Modernization • Cloud Migration</div>
                 </div>
                 <div class="skill-category">
-                    <div class="skill-title">Delivery & Governance</div>
-                    <div class="skill-list">Project Management • Agile/Waterfall • ITIL • Change Management • SLA Management • Budget Control</div>
-                </div>
-                <div class="skill-category">
-                    <div class="skill-title">Technical Skills</div>
-                    <div class="skill-list">Application Architecture • Integration • APIs • Cloud Migration • Database Management • DevOps</div>
+                    <div class="skill-title">Team Leadership</div>
+                    <div class="skill-list">Team Building • Performance Management • Talent Development • Resource Planning • Vendor Management • Offshore Coordination</div>
                 </div>
             </div>
         </div>
@@ -75,74 +76,46 @@
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">TopMed</div>
-                        <div class="role">Senior Manager - Applications & Systems</div>
+                        <div class="company">EMP (Enterprise Technology)</div>
+                        <div class="role">Technical Director - Application Delivery</div>
                     </div>
-                    <div class="date">2022 - Present | Dubai, UAE</div>
+                    <div class="date">2014 - 2017 | Cairo, Egypt</div>
                 </div>
                 <ul>
-                    <li>Manage portfolio of <strong>25+ enterprise applications</strong> across healthcare operations with 99.5% uptime SLA</li>
-                    <li>Led ERP implementation project integrating finance, HR, and supply chain modules across 8 facilities</li>
-                    <li>Optimized software licensing resulting in <strong>$300K annual savings</strong></li>
-                    <li>Established application governance framework with standardized SDLC processes</li>
-                    <li>Manage vendor relationships with 12 strategic technology partners</li>
+                    <li>Led <strong>300+ enterprise application projects</strong> for banking, telecom, and government clients with 95% on-time delivery</li>
+                    <li>Managed end-to-end software development lifecycle ensuring quality standards and SLA compliance</li>
+                    <li>Built and led technical delivery team of 50+ professionals across multiple project streams</li>
+                    <li>Oversaw client relationships for major accounts, driving satisfaction and repeat business</li>
+                    <li>Implemented application modernization strategies migrating legacy systems to modern architectures</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">PaySky</div>
-                        <div class="role">Manager - Application Delivery</div>
+                        <div class="company">TopMed (Healthcare)</div>
+                        <div class="role">CTO - Applications & Digital</div>
                     </div>
-                    <div class="date">2019 - 2022 | Dubai, UAE</div>
+                    <div class="date">2024 - Present | Dubai, UAE</div>
                 </div>
                 <ul>
-                    <li>Oversaw development and maintenance of payment processing platform handling <strong>$500M+ annually</strong></li>
-                    <li>Led migration from monolithic to microservices architecture improving scalability by <strong>300%</strong></li>
-                    <li>Implemented CI/CD pipelines reducing deployment time from days to hours</li>
-                    <li>Managed team of 18 developers, QA engineers, and support specialists</li>
+                    <li>Direct application portfolio management across enterprise systems including ERP, CRM, and custom healthcare applications</li>
+                    <li>Ensure quality standards and performance SLAs for mission-critical healthcare systems</li>
+                    <li>Lead team performance and professional development for 45+ technology professionals</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <div class="job-header">
                     <div>
-                        <div class="company">El Araby Group</div>
-                        <div class="role">Applications Manager</div>
+                        <div class="company">Microsoft</div>
+                        <div class="role">Solutions Architect</div>
                     </div>
-                    <div class="date">2016 - 2019 | Cairo, Egypt</div>
+                    <div class="date">2007 - 2014 | Regional</div>
                 </div>
                 <ul>
-                    <li>Managed enterprise application portfolio across 7 countries including ERP, CRM, and BI systems</li>
-                    <li>Led Oracle ERP upgrade project across 15 business units with zero business disruption</li>
-                    <li>Reduced application incidents by <strong>45%</strong> through proactive monitoring and preventive maintenance</li>
-                </ul>
-            </div>
-
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">Soleek | Talabat</div>
-                        <div class="role">Senior Application Consultant / Technical Lead</div>
-                    </div>
-                    <div class="date">2012 - 2016 | UAE/Egypt</div>
-                </div>
-                <ul>
-                    <li>Delivered custom application solutions for financial services and e-commerce clients</li>
-                </ul>
-            </div>
-
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">Revamp Consulting | Microsoft</div>
-                        <div class="role">Application Architect</div>
-                    </div>
-                    <div class="date">2007 - 2012 | Dubai, UAE</div>
-                </div>
-                <ul>
-                    <li>Designed and implemented enterprise applications for banking and government clients</li>
+                    <li>Designed enterprise application solutions for government and banking clients</li>
+                    <li>Led pre-sales and solution architecture for complex application deployments</li>
                 </ul>
             </div>
         </div>
@@ -150,10 +123,9 @@
         <div class="section">
             <div class="section-title">Education & Certifications</div>
             <ul>
+                <li><strong>MBA</strong> - Business Administration</li>
                 <li><strong>PMP Certification</strong> - Project Management Professional</li>
-                <li><strong>ITIL v4 Foundation</strong></li>
-                <li><strong>Oracle Certified Professional</strong></li>
-                <li><strong>SAP Application Associate</strong></li>
+                <li><strong>ITIL v4</strong> - IT Service Management</li>
             </ul>
         </div>
     </div>
