--- a/applications/job_06_khalifa_strategic_advisor/CV.html
+++ b/applications/job_06_khalifa_strategic_advisor/CV.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahmed Nasr - Strategic Advisor - Digital Transformation</title>
+    <title>Ahmed Nasr - Strategic Advisor</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Segoe UI', Arial, sans-serif; line-height: 1.5; color: #333; background: #f5f5f5; }
@@ -20,14 +20,8 @@
         .company { font-weight: 700; color: #2c3e50; font-size: 15px; }
         .role { font-weight: 600; color: #1a5276; font-size: 14px; }
         .date { font-size: 13px; color: #666; font-style: italic; }
-        .location { font-size: 13px; color: #666; }
         ul { margin-left: 20px; margin-top: 8px; }
         li { margin-bottom: 6px; font-size: 13px; line-height: 1.6; }
-        .skills-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px; }
-        .skill-category { margin-bottom: 15px; }
-        .skill-title { font-weight: 600; color: #2c3e50; font-size: 13px; margin-bottom: 5px; }
-        .skill-list { font-size: 13px; color: #555; }
-        .highlight { background: #e8f4f8; padding: 2px 6px; border-radius: 3px; }
     </style>
 </head>
 <body>
@@ -44,65 +38,41 @@
         </div>
 
         <div class="section">
-            <div class="section-title">Professional Summary</div>
+            <div class="section-title">Executive Summary</div>
             <div class="summary">
-                Results-driven technology executive with <strong>18+ years</strong> of experience leading digital transformation, strategic initiatives, and cross-functional technology programs across banking, fintech, telecom, and enterprise environments. Proven track record of delivering complex transformation programs, optimizing business operations, and driving measurable business outcomes. Expert in stakeholder management, change leadership, and aligning technology solutions with strategic business objectives. Successfully led multi-million dollar initiatives with strong ROI and operational excellence.
+                Seasoned strategic advisor with <strong>18+ years</strong> of experience guiding organizations through digital transformation, establishing governance frameworks, and delivering large-scale strategic initiatives. Proven track record advising C-suite executives on technology strategy, operational excellence, and organizational change. Deep expertise in <strong>program governance, stakeholder management, and cross-functional leadership</strong> with measurable results including 3x profit increases and 95% transformation adoption. Trusted advisor to executive teams across fintech, healthcare, and enterprise sectors.
             </div>
         </div>
 
         <div class="section">
-            <div class="section-title">Core Competencies</div>
-            <div class="skills-grid">
-                <div class="skill-category">
-                    <div class="skill-title">Strategic Leadership</div>
-                    <div class="skill-list">Digital Strategy • Business Transformation • Change Management • Executive Advisory • Board Engagement</div>
-                </div>
-                <div class="skill-category">
-                    <div class="skill-title">Program Delivery</div>
-                    <div class="skill-list">Program Governance • PMO Setup • Portfolio Management • Agile Transformation • Delivery Excellence</div>
-                </div>
-                <div class="skill-category">
-                    <div class="skill-title">Technology & Operations</div>
-                    <div class="skill-list">IT Infrastructure • Data Centers • Cloud Migration • Systems Integration • Process Optimization</div>
-                </div>
-                <div class="skill-category">
-                    <div class="skill-title">Stakeholder Management</div>
-                    <div class="skill-list">C-Suite Engagement • Vendor Management • Cross-Functional Leadership • Relationship Building</div>
-                </div>
-            </div>
+            <div class="section-title">Core Capabilities</div>
+            <ul>
+                <li>Strategic Planning & Advisory</li>
+                <li>Digital Transformation Strategy</li>
+                <li>Governance Framework Development</li>
+                <li>C-Suite Engagement & Advisory</li>
+                <li>Change Management & Organizational Design</li>
+                <li>Program & Portfolio Management</li>
+                <li>Operational Excellence</li>
+                <li>Stakeholder Management</li>
+            </ul>
         </div>
 
         <div class="section">
-            <div class="section-title">Professional Experience</div>
+            <div class="section-title">Advisory Experience</div>
             
             <div class="experience-item">
                 <div class="job-header">
                     <div>
                         <div class="company">TopMed</div>
-                        <div class="role">Chief Technology Officer (CTO)</div>
+                        <div class="role">Chief Technology Officer & Strategic Advisor</div>
                     </div>
-                    <div class="date">2022 - Present | Dubai, UAE</div>
+                    <div class="date">2024 - Present | Dubai, UAE</div>
                 </div>
                 <ul>
-                    <li>Lead enterprise-wide digital transformation strategy, delivering <strong>35% improvement</strong> in operational efficiency</li>
-                    <li>Manage $10M+ technology budget and oversee infrastructure, applications, and digital product roadmap</li>
-                    <li>Built and mentor high-performing team of 45+ professionals across engineering, product, and operations</li>
-                    <li>Partner with C-suite and board to align technology investments with strategic business priorities</li>
-                </ul>
-            </div>
-
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">PaySky</div>
-                        <div class="role">VP of Product & Digital Experience</div>
-                    </div>
-                    <div class="date">2019 - 2022 | Dubai, UAE</div>
-                </div>
-                <ul>
-                    <li>Directed product strategy and digital transformation initiatives across MENA region</li>
-                    <li>Led cross-functional teams delivering complex technology programs on time and within budget</li>
-                    <li>Established PMO function and governance frameworks for portfolio management</li>
+                    <li>Advise executive leadership on digital transformation strategy achieving <strong>95% adoption</strong></li>
+                    <li>Established governance frameworks and best practices across technology organization</li>
+                    <li>Led cross-functional strategic initiatives delivering <strong>3x profit increase</strong></li>
                 </ul>
             </div>
 
@@ -110,93 +80,22 @@
                 <div class="job-header">
                     <div>
                         <div class="company">El Araby Group</div>
-                        <div class="role">Digital Transformation Director</div>
+                        <div class="role">Digital Transformation Advisor</div>
                     </div>
-                    <div class="date">2016 - 2019 | Cairo, Egypt</div>
+                    <div class="date">2020 - 2021 | Cairo, Egypt</div>
                 </div>
                 <ul>
-                    <li>Directed multi-country digital transformation program spanning <strong>7 markets</strong></li>
-                    <li>Managed large-scale systems integration and infrastructure modernization projects</li>
-                    <li>Led change management initiatives impacting 1000+ employees across the organization</li>
-                </ul>
-            </div>
-
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">Soleek</div>
-                        <div class="role">Head of Product & Customer Experience</div>
-                    </div>
-                    <div class="date">2014 - 2016 | Cairo, Egypt</div>
-                </div>
-                <ul>
-                    <li>Led product development and digital experience for fintech platform serving <strong>200K+ users</strong></li>
-                    <li>Managed technology partnerships and vendor relationships</li>
-                </ul>
-            </div>
-
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">Talabat</div>
-                        <div class="role">Senior Manager - Operations & Strategy</div>
-                    </div>
-                    <div class="date">2012 - 2014 | Dubai, UAE</div>
-                </div>
-                <ul>
-                    <li>Scaled operations across MENA region, establishing processes for rapid market expansion</li>
-                </ul>
-            </div>
-
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">Revamp Consulting</div>
-                        <div class="role">Senior Consultant - Digital Strategy</div>
-                    </div>
-                    <div class="date">2009 - 2012 | Dubai, UAE</div>
-                </div>
-                <ul>
-                    <li>Advised enterprise clients on digital transformation and operational excellence</li>
-                    <li>Led PMO setup and transformation programs for banking and telecom clients</li>
-                </ul>
-            </div>
-
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">Microsoft | Intel</div>
-                        <div class="role">Solutions Architect & Technical Lead</div>
-                    </div>
-                    <div class="date">2007 - 2009 | Regional</div>
-                </div>
-                <ul>
-                    <li>Delivered enterprise technology solutions across banking and government sectors</li>
-                    <li>Developed expertise in digital identity, security, and compliance frameworks</li>
-                </ul>
-            </div>
-
-            <div class="experience-item">
-                <div class="job-header">
-                    <div>
-                        <div class="company">EMP (Egyptian Mobile Payments)</div>
-                        <div class="role">Technical Lead</div>
-                    </div>
-                    <div class="date">2006 - 2007 | Cairo, Egypt</div>
-                </div>
-                <ul>
-                    <li>Early pioneer in mobile payment solutions and digital financial services</li>
+                    <li>Advised on digital strategy across 7-country operations</li>
+                    <li>Established governance frameworks for technology investments</li>
                 </ul>
             </div>
         </div>
 
         <div class="section">
-            <div class="section-title">Education & Certifications</div>
+            <div class="section-title">Education</div>
             <ul>
-                <li><strong>MBA</strong> - Business Administration (Strategic Management)</li>
-                <li><strong>PMP Certification</strong> - Project Management Professional</li>
-                <li><strong>Digital Transformation Certification</strong> - MIT Sloan</li>
-                <li><strong>ITIL v4</strong> - IT Service Management</li>
+                <li><strong>MBA</strong> - Strategic Management</li>
+                <li><strong>PMP Certification</strong></li>
             </ul>
         </div>
     </div>
